tests/integration/input/error.swift
// RUN: %not %neal %args | %check

x! // CHECK: error:\d+ No force unwrap
